--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       padding: 0;
       margin:0px;
     }
+    #animationContainer {
+      touch-action: pinch-zoom;
+    }
   </style>
   <script src="p5.min.js"></script>
   <script src="sketch.js"></script>
