--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <style>
     body {
       padding: 0;
-      margin:0px;
-    }
-    #animationContainer {
-      touch-action: pinch-zoom;
+      margin:0px    ;
+      touch-action: none;
     }
   </style>
   <script src="p5.min.js"></script>
