--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       margin:0px    ;
       touch-action: none;
     }
+    #animationContainer {
+      touch-action: pinch-zoom;
+    }
   </style>
   <script src="p5.min.js"></script>
   <script src="sketch.js"></script>
