--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <br>
   <input type="range" min="1" max="100" value="50" id="globalSpeedSlider" onchange="updateGlobalSliderIncrement()">
   <br>
-  <p> Drawing Mode </p>  
+  <p> Drawing Mode! </p>  
   <input type="checkbox" id="drawLinesCheckbox" onchange="changeLineDrawing()">
 </body>
 
