--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>p5.js example</title>
+  <title>RugbySlate Animator</title>
   <style>
     * {
       padding: 0;
@@ -92,7 +92,7 @@
         <p>Edit colour:</p>
         <div class="colorOptionsContainer" id="colorOptionsPlayerEdit">
             <div class="colorOption active" data-color="0" onclick="changeColorSelection(this)">✔</div>
-            <div class="colorOption" data-color="1" onclick="changeColorSelection(this)"></div
+            <div class="colorOption" data-color="1" onclick="changeColorSelection(this)"></div>
             <div class="colorOption" data-color="2" onclick="changeColorSelection(this)"></div>
             <div class="colorOption blackTick" data-color="3" onclick="changeColorSelection(this)"></div>
             <div class="colorOption" data-color="4" onclick="changeColorSelection(this)"></div>
