--- a/index.html
+++ b/index.html
@@ -305,7 +305,9 @@
   </div>
 
   <div id="exportedGIF" class="modal" onclick="hideDomElement('exportedGIF')">
-     <img src="">
+    <div class="modal-content" onclick="event.stopPropagation()">
+     <img src="" style="max-width: 90%; ">
+   </div>
   </div>
 </footer>
 
