--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <a onclick="openHeaderMenu('pitchHeaderMenu'); closeSideNavMenu(); pitchMode = true">Pitch</a>
     <a href="#">Save</a>
     <a href="#">Load</a>
-    <a onclick="recordCanvas()">Export</a>
+    <a onclick="startRecordingCanvas()">Export</a>
     <a href="#">Exit</a>
   </div>
   <div id="sideNavMenuCover" class="modal" onclick="closeSideNavMenu()"></div>
