--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 </div>
 
 
-
 </body>
 
 <footer>
@@ -320,6 +319,10 @@
      <img src="" style="max-width: 90%; ">
    </div>
   </div>
+
+<div id="testy" style="height: 100%; width: 100%; z-index: 100; position: fixed; left: 0; top: 0; background: #555; visibility: hidden">
+  testy
+</div>
 
   <script src="recordCanvas.js"></script>
 </footer>
