--- a/index.html
+++ b/index.html
@@ -3,19 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-<!--   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>RugbySlate Animator</title>
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-      touch-action: none;
-    }
-    canvas{
-      display: block;
-    }
-
-  </style>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link rel="stylesheet" type="text/css" href="css/playerEditModal.css">
   <link rel="stylesheet" type="text/css" href="css/addActorModal.css">
